--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Terminal Impérial</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=7" />
 </head>
 <body>
   <div id="bg"></div>
@@ -84,7 +84,7 @@
     </section>
   </main>
 
-  <script src="gmod.js"></script>
-  <script src="main.js"></script>
+  <script src="gmod.js?v=7"></script>
+  <script src="main.js?v=7"></script>
 </body>
 </html>
