--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="meta">
           <div class="metaLine">
-            <span class="k">Températtture ext.</span>
+            <span class="k">Température ext.</span>
             <span class="v" id="temp">--°C</span>
           </div>
           <div class="metaLine">
